# QRCodeGen

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: constants.hpp  input_handler.cpp  input_handler.hpp  qr_code_generator.cpp  qr_code_generator.hpp  qr_code_meta_data.hpp
tests/: test_main.cpp
